# SOFA.FloatPrecision

./: CMakeLists.txt  README.md  generate_components_json.py  plugin_maker.py
Sofa.Component.float/: CMakeLists.txt  README.md  Sofa.Component.floatConfig.cmake.in
Sofa.Component.float/src/Sofa.Component.float/: Components.cpp  config.h.in  init.cpp  init.h
Sofa.Component.longdouble/: CMakeLists.txt  README.md  Sofa.Component.longdoubleConfig.cmake.in
Sofa.Component.longdouble/src/Sofa.Component.longdouble/: Components.cpp  config.h.in  init.cpp  init.h
creators/: __init__.py  additional_includes.txt  cmake.py  docs.py  src.py  utils.py
